<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">matching-manager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="common_btn_submit">확인</string>
    <string name="common_btn_cancel">취소</string>
    <string name="sign_up_et_hint_Username">Input username</string>
    <string name="sign_up_et_hint_phone_number">Input phone number</string>
    <string name="sign_up_tv_username">Username</string>
    <string name="sign_up_tv_phone_number">Phone number</string>
    <string name="sign_up_tv_Username_description">Username은 최소 2자리 최대 8자리로 구성됩니다.</string>
    <string name="sign_up_tv_phone_number_description">매칭에 사용될 핸드폰 번호를 입력해주세요.</string>
    <string name="sign_up_description">Matching Manager를 사용 하기 위해\n추가정보를 입력해주세요.</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="home_tv_recent_post">최근 게시글</string>
    <string name="home_tv_announcement">공지사항</string>
    <string name="home_tv_more_information">더보기</string>
    <string name="home_tv_title_match">추천 경기 매칭</string>
    <string name="home_tv_title_team">팀원 모집/신청</string>
    <string name="home_test_announcement">공지사항 타이틀이 들어갈 자리입니다.</string>
    <string name="announcement_tv_title">공지사항</string>
    <string name="announcement_btn_close">CLOSE</string>
    <string name="sign_in_continue_with_google">Continue With Google</string>
    <string name="default_web_client_id">677718539523-47ds99rnc0eupphgjm4rnbmkojntg506.apps.googleusercontent.com</string>
    <string name="main_home">Home</string>
    <string name="main_match">Match</string>
    <string name="main_calendar">Calendar</string>
    <string name="main_team">Team</string>
    <string name="main_mypage">MyPage</string>
    <string name="arena_title">추천 경기장</string>
    <string name="arena_filter">필터</string>
    <string name="arena_futsal">풋살</string>
    <string name="arena_soccer">축구</string>
    <string name="arena_bowling">볼링</string>
    <string name="arena_basketball">농구</string>
    <string name="arena_badminton">배드민턴</string>
    <string name="arena_name">경기장 이름</string>
    <string name="arena_adress">경기 안양 동안구 관평로 149</string>
    <string name="match_item_type">축구</string>
    <string name="match_item_detail">11:11 남성</string>
    <string name="match_item_view_count">1</string>
    <string name="match_item_chat_count">0</string>
    <string name="match_item_schedule">11/2 (목) 오후 8시</string>
    <string name="match_item_place">광주광역시 동구 지산동 조선대학교 운동장</string>
    <string name="match_fragment_mercenary">용병</string>
    <string name="match_fragment_team_matching">팀 매칭</string>
    <string name="match_fragment_filter">필터</string>
    <string name="match_fragment_category">카테고리</string>
    <string name="match_detail_dialog_info">매치</string>
    <string name="match_detail_title">매치 제목</string>
    <string name="match_detail_add">매치 글쓰기</string>
    <string name="match_writing">매치 게시글</string>
    <string name="match_detail_nickName">작성자</string>
    <string name="match_detail_time">5시간 전</string>
    <string name="match_detail_slash">/</string>
    <string name="match_detail_view_count">조회 5</string>
    <string name="match_detail_manner_score_title">매너점수</string>
    <string name="match_detail_manner_score">5.0</string>
    <string name="match_detail_information">정보</string>
    <string name="match_detail_match_title">경기 종목</string>
    <string name="match_detail_match_type">축구</string>
    <string name="match_detail_match">무슨 정보일까</string>
    <string name="match_detail_people_number_title">인원</string>
    <string name="match_detail_people_number">11 VS 11</string>
    <string name="match_detail_gender_title">성별</string>
    <string name="match_detail_gender">남성</string>
    <string name="match_detail_skill_title">실력</string>
    <string name="match_detail_skill">중</string>
    <string name="match_detail_entry_fee_title">참가비</string>
    <string name="match_detail_entry_fee">5만원</string>
    <string name="match_detail_team_name_title">팀 이름</string>
    <string name="match_detail_team_name">맨시티</string>
    <string name="match_detail_description">글 내용</string>
    <string name="match_detail_stadium"></string>
    <string name="team_item_type">용병모집</string>
    <string name="team_writing">용병 모집/신청 게시글</string>
    <string name="team_item_number">2명</string>
    <string name="team_item_gender">남성</string>
    <string name="team_item_view_count">1</string>
    <string name="team_item_chat_count">0</string>
    <string name="team_item_schedule">10/11일(수)오전 10시</string>
    <string name="team_item_place">광주광역시 동구 지산동 조선대학교 운동장</string>
    <string name="team_fragment_title">모집/신청</string>
    <string name="team_fragment_application">용병신청</string>
    <string name="team_fragment_recruitment">용병모집</string>
    <string name="team_fragment_filter">필터</string>
    <string name="team_fragment_tv_empty">선택된 정보가 없습니다!</string>
    <string name="team_detail_recruitment">용병 신청하기</string>
    <string name="team_detail_application">용병 초대하기</string>
    <string name="team_detail_title">모집/신청</string>
    <string name="team_detail_team">작성자</string>
    <string name="team_detail_time">5시간 전</string>
    <string name="team_detail_slash">/</string>
    <string name="team_detail_view_count">5</string>
    <string name="team_detail_information">정보</string>
    <string name="team_detail_match_title">용병 모집</string>
    <string name="team_detail_match">이미지</string>
    <string name="team_detail_people_number_title">인원</string>
    <string name="team_detail_people_number">2명</string>
    <string name="team_detail_gender_title">성별</string>
    <string name="team_detail_gender">남성</string>
    <string name="team_detail_skill_title">실력</string>
    <string name="team_detail_skill">중</string>
    <string name="team_detail_age1">나이</string>
    <string name="team_detail_age2">20살</string>
    <string name="team_detail_pay">참가비</string>
    <string name="team_detail_price">5,000원</string>
    <string name="team_detail_team_name_title">팀이름</string>
    <string name="team_detail_team_name">모집FC</string>
    <string name="team_detail_description">글 내용</string>
    <string name="team_detail_img">사진</string>
    <string name="team_add_activity_recruit">용병모집 글쓰기</string>
    <string name="team_add_activity_application">용병신청 글쓰기</string>
    <string name="team_add_activity_team_name">팀이름</string>
    <string name="team_add_activity_male">남성</string>
    <string name="team_add_activity_female">여성</string>
    <string name="team_add_activity_mix">혼성</string>
    <string name="team_category_recruitment">용병 모집해요</string>
    <string name="team_category_application">용병 신청해요</string>
    <string name="team_myteam">팀</string>
    <string name="team_recruitment">모집</string>
    <string name="arena_dialog_info">경기장 정보</string>
    <string name="arena_dialog_title">평촌중앙공원 농구장</string>
    <string name="arena_dialog_location">장소</string>
    <string name="arena_dialog_call">전화번호</string>
    <string name="arena_dialog_location_text">경기도 안양시 평촌중앙공원 경기도 안양시 평촌중앙공원 경기도 안양시 평촌중앙공원</string>
    <string name="arena_dialog_call_text">010-0000-0000</string>
    <string name="arena_dialog_btn_cancel">CANCEL</string>
    <string name="arena_dialog_btn_call">CALL</string>
    <string name="undefined_test_value">미정 입니다.</string>
    <string name="alarm">알림</string>
    <string name="alarm_no_alarm">받은 알림 내역이 없습니다.</string>
    <string name="alarm_recyclerview_title">스파르타FC와 매칭이 성사되었습니다.</string>
    <string name="alarm_recyclerview_user_text">User : </string>
    <string name="alarm_recyclerview_phone_number_text">Phone : </string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">새로운 알림이 있습니다.</string>
    <string name="send_dialog_btn_cancel">CANCEL</string>
    <string name="send_dialog_btn_submit">SUBMIT</string>
    <string name="send_message_matching">경기 매칭을 신청 하시겠습니까?</string>
    <string name="send_message_recruit">용병을 신청 하시겠습니까?</string>
    <string name="send_fcm_body_matching">경기 매칭 신청입니다.</string>
    <string name="send_fcm_body_recruit">용병 신청입니다.</string>
    <string name="send_missing_user_information">사용자 정보가 일치하지 않습니다.</string>
    <string name="calendar_item_schedule_match">경기일정</string>
    <string name="calendar_item_schedule_day">23</string>
    <string name="calendar_item_schedule_month">NOV</string>
    <string name="calendar_item_place">전남 담양 금성면</string>
    <string name="calendar_item_schedule">23 Nov - 24 Nov</string>
    <string name="calendar_item_schedule_divison">Online Remote</string>
    <string name="common_sign_out_button_text">SIGN OUT</string>
    <string name="calendar_item_tv_schedule_year">년도</string>
    <string name="calendar_item__tv_schedule_memo">memo</string>
    <string name="my_profile">프로필</string>
    <string name="my_btn_Sign_Out">SIGN OUT</string>
    <string name="my_test_username">봉선동손흥민</string>
    <string name="my_bookmark">관심목록</string>
    <string name="my_test_real_name">추민수</string>
    <string name="my_test_phone_number">01028179282</string>
    <string name="my_test_email">sonny@gmail.com</string>
    <string name="dialog_edit_location">location</string>
    <string name="dialog_edit_nickname">nickname</string>
    <string name="dialog_edit_id">id</string>
    <string name="dialog_edit_btn_save">저장</string>
    <string name="dialog_edit_btn_cancel">취소</string>
    <string name="calendar_edit_dialog_fragment_schedule_title">일정</string>
    <string name="calendar_edit_dialog_fragment_schedule">2023년 10월 11일 14:00</string>
    <string name="calendar_edit_dialog_fragment_location_title">장소</string>
    <string name="calendar_edit_dialog_fragment_location">경기도 안양시 평촌중앙공원</string>
    <string name="calendar_edit_dialog_fragment_memo_title">메모</string>
    <string name="calendar_edit_dialog_fragment_memo">메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.메모입니다.</string>
    <string name="calendar_edit_dialog_fragment_memo_btn_cancel">취소</string>
    <string name="calendar_edit_dialog_fragment_memo_btn_save">저장</string>
    <string name="calendar_edit_dialog_fragment_memo_">메모 할 내용을 입력해주세요.</string>
    <string name="calendar_add_dialog_fragment_input_area">input area</string>
    <string name="calendar_add_dialog_fragment_input_memo">input memo</string>
    <string name="calendar_add_dialog_fragment_place">장소</string>
    <string name="calendar_add_dialog_fragment_memo">메모</string>
    <string name="calendar_add_dialog_fragment_memo_invisible_year">년</string>
    <string name="calendar_add_dialog_fragment_memo_invisible_month">월</string>
    <string name="calendar_add_dialog_fragment_memo_invisible_day">일</string>
    <string name="calendar_add_dialog_fragment_btn_cancel">CANCEL</string>
    <string name="calendar_add_dialog_fragment_btn_save">SAVE</string>
    <string name="toolbar_area">area</string>
    <string name="toolbar_alarm">alarm</string>
    <string name="toolbar_team">용병 모집/신청</string>
    <string name="toolbar_my_page">마이 페이지</string>
    <string name="toolbar_match">경기 매칭</string>
    <string name="toolbar_calendar">일정 관리</string>
</resources>