<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_gradient_background">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_cancel" />

            <TextView
                android:id="@+id/tv_dialog_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/match_detail_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_cancel" />

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dialog_info"
                app:srcCompat="@drawable/ic_team_name" />

            <TextView
                android:id="@+id/tv_team_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/match_detail_team"
                app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
                app:layout_constraintStart_toEndOf="@+id/iv_profile"
                app:layout_constraintTop_toTopOf="@+id/iv_profile" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/match_detail_time"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/match_detail_slash"
                app:layout_constraintBottom_toBottomOf="@+id/tv_view_count"
                app:layout_constraintEnd_toStartOf="@+id/tv_view_count"
                app:layout_constraintTop_toTopOf="@+id/tv_view_count" />

            <TextView
                android:id="@+id/tv_view_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/match_detail_view_count"
                app:layout_constraintBottom_toTopOf="@+id/iv_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dialog_info" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/match_detail_manner_score_title"
                app:layout_constraintBottom_toBottomOf="@+id/tv_manner_score"
                app:layout_constraintEnd_toStartOf="@+id/tv_manner_score"
                app:layout_constraintTop_toTopOf="@+id/tv_manner_score" />

            <TextView
                android:id="@+id/tv_manner_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/match_detail_manner_score"
                app:layout_constraintBottom_toBottomOf="@+id/iv_manner_face"
                app:layout_constraintEnd_toStartOf="@+id/iv_manner_face"
                app:layout_constraintTop_toTopOf="@+id/iv_manner_face" />

            <ImageView
                android:id="@+id/iv_manner_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_profile"
                app:srcCompat="@drawable/ic_face" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="정보"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <View
                android:id="@+id/view1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/common_point_green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_detail_match_title"
                app:layout_constraintEnd_toEndOf="@+id/view1"
                app:layout_constraintHorizontal_bias="0.541"
                app:layout_constraintStart_toStartOf="@+id/view1"
                app:layout_constraintTop_toTopOf="@+id/view1" />


            <TextView
                android:id="@+id/tv_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_detail_match"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <View
                android:id="@+id/view2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/common_point_green"
                app:layout_constraintEnd_toStartOf="@+id/view3"
                app:layout_constraintStart_toEndOf="@+id/view1"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_detail_people_number_title"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <TextView
                android:id="@+id/tv_people_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_detail_people_number"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />


            <View
                android:id="@+id/view3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                android:background="@color/common_point_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_detail_gender_title"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/view3" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_detail_gender"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <View
                android:id="@+id/view4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:background="@color/common_point_green"
                app:layout_constraintStart_toStartOf="@+id/view1"
                app:layout_constraintTop_toBottomOf="@+id/view1" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_detail_skill_title"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toTopOf="@+id/view4" />

            <TextView
                android:id="@+id/tv_skill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_detail_skill"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <View
                android:id="@+id/view5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/common_point_green"
                app:layout_constraintEnd_toStartOf="@+id/view6"
                app:layout_constraintStart_toEndOf="@+id/view4"
                app:layout_constraintTop_toTopOf="@+id/view4" />

            <TextView
                android:id="@+id/tv_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_detail_entry_fee_title"
                app:layout_constraintEnd_toEndOf="@+id/view5"
                app:layout_constraintStart_toStartOf="@+id/view5"
                app:layout_constraintTop_toTopOf="@+id/view5" />

            <TextView
                android:id="@+id/tv_entry_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_detail_entry_fee"
                app:layout_constraintEnd_toEndOf="@+id/view5"
                app:layout_constraintStart_toStartOf="@+id/view5"
                app:layout_constraintTop_toBottomOf="@+id/tv_fee" />


            <View
                android:id="@+id/view6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:background="@color/common_point_green"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/tv_team_nicname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_detail_team_name_title"
                app:layout_constraintEnd_toEndOf="@+id/view6"
                app:layout_constraintStart_toStartOf="@+id/view6"
                app:layout_constraintTop_toTopOf="@+id/view6" />

            <TextView
                android:id="@+id/tv_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_detail_team_name"
                app:layout_constraintEnd_toEndOf="@+id/view6"
                app:layout_constraintStart_toStartOf="@+id/view6"
                app:layout_constraintTop_toBottomOf="@+id/tv_team" />


            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/match_detail_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/match_detail_stadium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/match_detail_bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>




